--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,9 +58,24 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  function playSound(e) {
+    const audio = document.querySelector(`audio[data-key='${e.keyCode}']`);
+    const key = document.querySelector(`.key[data-key='${e.keyCode}']`);
+    if (!audio) return; // stop playing
+    audio.currentTime = 0; // reset to start
+    audio.play();
+    key.classList.add('playing');
+  }
 
+  function removeTransition(e) {
+    if (e.propertyName !== 'transform') return // skip if its not transform
+    this.classList.remove('playing');
+  }
+  
+  const keys = document.querySelectorAll('.key'); // get the div with key class
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition)) // add remove transition event listener
+  window.addEventListener('keydown', playSound);
 </script>
-
 
 </body>
 </html>
